book search form, view, templates, etc [#67573508]

--- a/readux/collection/templates/collection/view.html
+++ b/readux/collection/templates/collection/view.html
@@ -35,10 +35,7 @@
         <div class="container">
             <ul class="media-list">
               {% for obj in items.object_list %}
-              <li>{{ obj.title }}
-                {% if obj.volume %}({{ obj.volume }}){% endif %}
-                <a href="{% url 'books:pdf' obj.pid %}" title="PDF for {{ obj.title|truncatechars:100 }} {{ obj.volume|default:'' }}"><span class="glyphicon glyphicon-file"></span></a>
-              </li>
+                {% include 'books/snippets/list_volume.html' %}
               {% endfor %}
             </ul>
         </div><!-- /.container-->
