unAPI support for volumes, to enable Zotero harvest [#67575460]

--- a/readux/books/templates/books/search.html
+++ b/readux/books/templates/books/search.html
@@ -3,6 +3,10 @@
 
 {% block page-subtitle %} | Search Results{% endblock %}
 
+{% block head_extras %}
+<link rel="unapi-server" type="application/xml" title="unAPI" href="{% url 'books:unapi' %}" />
+{% endblock %}
+
 {% block content %}
 <div class="container">
     <header class="page-header">
