--- a/readux/collection/templates/collection/view.html
+++ b/readux/collection/templates/collection/view.html
@@ -3,6 +3,10 @@
 
 {% block page-subtitle %} | Collections | {{ collection.short_label }}{% endblock %}
 
+{% block head_extras %}
+<link rel="unapi-server" type="application/xml" title="unAPI" href="{% url 'books:unapi' %}" />
+{% endblock %}
+
 {% block content %}
 <div class="container">
     <header class="page-header">
