--- a/readux/books/templates/books/snippets/list_volume.html
+++ b/readux/books/templates/books/snippets/list_volume.html
@@ -13,7 +13,8 @@
     {% if obj.volume %}({{ obj.volume }}){% endif %}
     <a href="{% url 'books:pdf' obj.pid %}" title="PDF for {{ obj.title|truncatechars:100 }} {{ obj.volume|default:'' }}"><span class="glyphicon glyphicon-file"></span></a>
 
-    <a href="http://voyant-tools.org/?input={{ obj.fulltext_absolute_url }}&amp;stopList=stop.en.taporware.txt"
+    {# link to voyant with full document plain text as input; preset english stopwords for english texts #}
+    <a href="http://voyant-tools.org/?input={{ obj.fulltext_absolute_url }}{% if obj.dc.content.language == "eng" %}&amp;stopList=stop.en.taporware.txt{% endif %}"
        title="send text to Voyant" target="_blank">
        <button class="btn btn-default btn-xs">
        Send to Voyant
