--- a/readux/collection/templates/collection/snippets/list_collection.html
+++ b/readux/collection/templates/collection/snippets/list_collection.html
@@ -1,9 +1,10 @@
 {% extends 'eultheme/snippets/collection_list_item.html' %}
+{% load humanize %}
 
 {% block url %}{% url 'collection:view' coll.pid %}{% endblock %}
 {% block title %}{{ coll.title }}{% endblock %}
 {% block info %}
 {% if count %}
-  {{ count }} volume{{ count|pluralize }}
+  {{ count|intcomma }} volume{{ count|pluralize }}
 {% endif %}
 {% endblock %}
