--- a/readux/books/templates/books/search.html
+++ b/readux/books/templates/books/search.html
@@ -53,6 +53,11 @@
             </ul>
         </div>
         {% endif %}
+
+    {% if items.has_other_pages %}
+      {% include 'eultheme/snippets/pagination_all_pages.html' with results=items %}
+    {% endif %}
+
     </section>
 </div>
 {% endblock %}
