suppress empty collections on collection browse page [#67572524]

--- a/readux/collection/templates/collection/browse.html
+++ b/readux/collection/templates/collection/browse.html
@@ -11,7 +11,9 @@
         <div class="container">
             <ul class="media-list collection-list">
                 {% for coll, count in collections %}
-                    {% include 'collection/snippets/list_collection.html' %}
+                    {% if count %} {# don't display empty collections #}
+                        {% include 'collection/snippets/list_collection.html' %}
+                    {% endif %}
                 {% endfor %}
             </ul>
         </div><!-- /.container-->
