display collection dc:description on collection list view and single collection view [#73074928]

--- a/readux/collection/templates/collection/view.html
+++ b/readux/collection/templates/collection/view.html
@@ -22,6 +22,9 @@
                   </ol>
               </div>
           </div>
+          {% if collection.dc.content.description %}
+          <p>{{ collection.dc.content.description }}</p>
+          {% endif %}
       </div>
 
     {% if items.paginator.count %}
