--- a/readux/collection/templates/collection/snippets/list_collection.html
+++ b/readux/collection/templates/collection/snippets/list_collection.html
@@ -7,4 +7,7 @@
 {% if count %}
   {{ count|intcomma }} volume{{ count|pluralize }}
 {% endif %}
+{% if coll.description %}
+<p>{{ coll.description|join:' ' }}</p>
+{% endif %}
 {% endblock %}
