Changes to collection page
[#73074876]
Created structure for thumbnails.
Added javascript for floating sort.
Added font for style

--- a/readux/books/templates/books/search.html
+++ b/readux/books/templates/books/search.html
@@ -53,9 +53,9 @@
     <section>
       {% if facets.collection %}
       <p>Filter results by collection:</p>
-      <ul>
+      <ul class="nav nav-pills">
         {% for label, count in facets.collection %}
-        <li><a href="?{{ url_params }}&amp;collection={{ label }} ">{{ label }}</a> ({{ count }})</li>
+        <li><a class="text-center" href="?{{ url_params }}&amp;collection={{ label }} ">{{ label }}({{ count }})</a> </li>
         {% endfor %}
       </ul>
       <hr/>
