--- a/readux/collection/templates/collection/snippets/list_collection_cover.html
+++ b/readux/collection/templates/collection/snippets/list_collection_cover.html
@@ -1,5 +1,7 @@
-{% extends 'eultheme/snippets/collection_list_item.html' %}
+{# {% extends 'eultheme/snippets/collection_list_item.html' %} #}
 {% load humanize %}
+
+{% comment %}
 
 {% block url %}{% url 'collection:view' coll.pid %}{% endblock %}
 {% block title %}{{ coll.title }}{% endblock %}
@@ -12,13 +14,15 @@
 {% endif %}
 {% endblock %}
 
+{% endcomment %}
+
 <li class="collection" {% if coll.thumbnail %}style="background-image:url({{coll.thumbnail}})"{% endif %}>
 	<a href="{% url 'collection:view' coll.pid %}">
 		<header>
 			<h3 class="title">{{ coll.title }}</h3>
 			<p class="number">
-				{% if coll.count %}
-					<span class="badge">{{col.count}} items</span>
+				{% if count %}
+					<span class="badge">{{ count|intcomma }} item{{ count|pluralize }}</span>
 				{% endif %}
 			</p>
 		</header>
