sample code for displaying volume cover image [#67574168]

--- a/readux/books/templates/books/snippets/list_volume.html
+++ b/readux/books/templates/books/snippets/list_volume.html
@@ -1,4 +1,10 @@
 <li>
+    {% comment %} {# testing: sample code for displaying page images #}
+    {% if obj.hasPrimaryImage %}
+      <img src="{% url 'books:page-thumbnail' obj.hasPrimaryImage %}"/>
+    {% endif %}
+    {% endcomment %}
+
     {% if obj.score %}
     <div class="clearfix"> </div>
     {# display numerical score in debug mode #}
