--- a/readux/collection/templates/collection/view.html
+++ b/readux/collection/templates/collection/view.html
@@ -9,43 +9,48 @@
 
 {% block content %}
 {# sample/possible banner image logic #}
-{% comment %}
+
  {% if collection.cover %} {# testing; probably should use collection.banner instead of collection.cover #}
- <img src="{{ collection.cover.get__blurred__banner }}"
-     alt="{{ collection.cover.alt_text }}" title="{{ collection.cover.title }}"/>
+  <style type="text/css">
+    header#page-bg{
+      background-image:url({{ collection.cover.get__blurred__banner }});
+    }
+  
+  </style>
  {% endif %}
-{% endcomment %}
-<div class="container">
-    <header class="page-header">
-        <h1>{{ collection.short_label }}</h1>
-
-        <div class="page-breadcrumbs">
-            <div class="container">
-                <div class="row">
-                    {# breadcrumb with collection hierarchy #}
-                    <ol class="breadcrumb">
-                      <li><a href="{% url 'collection:browse' %}">Collections</a></li>
-                      <li class="active">{{ collection.short_label }}</li>
-                  </ol>
-              </div>
-          </div>
-          {% if collection.dc.content.description %}
-          <p>{{ collection.dc.content.description }}</p>
-          {% endif %}
+<header class="page-header" id="page-bg">
+  <div class="container">
+    <div class="page-breadcrumbs">
+      <div class="container">
+          <div class="row">
+              {# breadcrumb with collection hierarchy #}
+              <ol class="breadcrumb">
+                <li><a href="{% url 'collection:browse' %}">Collections</a></li>
+                <li class="active">{{ collection.short_label }}</li>
+            </ol>
+        </div>
       </div>
-
-    {% if items.paginator.count %}
-    <h2 class="section-heading">{{ items.paginator.count|intcomma }} volume{{ items.paginator.count|pluralize }} in this collection</h2>
-    <p class="lead">
-        {% if items.has_other_pages and items.object_list|length > 1 %}
-        displaying {{ items.start_index|intcomma }} - {{ items.end_index|intcomma }}{% endif %}
-        {# if more than one item on this page, display range of results #}
-    </p>
-    {% else %}
-    <h2 id="no-results-found">No volumes in this collection.</h2>
-    {% endif %}
-    </header>
-    <section>
+    </div>
+  </div>
+  <div class="container">
+      <h1>{{ collection.short_label }}</h1>
+      {% if collection.dc.content.description %}
+        <p>{{ collection.dc.content.description }}</p>
+      {% endif %}
+  </div>
+</header>
+<div class="container">
+    <section class="collection-section">
+      {% if items.paginator.count %}
+        <h2 class="section-heading">{{ items.paginator.count|intcomma }} volume{{ items.paginator.count|pluralize }} in this collection</h2>
+        <p class="lead">
+            {% if items.has_other_pages and items.object_list|length > 1 %}
+            displaying {{ items.start_index|intcomma }} - {{ items.end_index|intcomma }}{% endif %}
+            {# if more than one item on this page, display range of results #}
+        </p>
+      {% else %}
+        <h2 id="no-results-found">No volumes in this collection.</h2>
+      {% endif %}
         <div class="container">
             <ul class="media-list">
               {% for obj in items.object_list %}
