generalize collection cover view for re-use with volumes [#67574168]

--- a/readux/collection/templates/collection/browse.html
+++ b/readux/collection/templates/collection/browse.html
@@ -7,17 +7,14 @@
     <header class="page-header">
         <h1>Collections</h1>
 
-        <div id="view-toggle" class="pull-right">
-            <a id="covers" class="btn disabled"><span class="glyphicon glyphicon-th"></span></a>
-            <a id="list" class="btn"><span class="glyphicon glyphicon-th-list"></span></a>
-        </div>
+        {% include "snippets/coverlist_toggle.html" %}
         <p class="lead">Digital archives grouped by topic or assortment.</p>
     </header>
     <section>
-        <div class="container">
+        <div class="container coverlist-toggle">
 
             {# thumbnail view #}
-            <div id="collection-covers">
+            <div id="cover-list" class="item-covers">
                 <ul class="media-list collection-list cover-view">
                     {% for coll, count in collections %}
                        {% if count %} {# don't display empty collections #}
@@ -28,7 +25,7 @@
            </div>
 
             {# list view #}
-            <div id="collection-list" class="hidden">
+            <div id="collection-list" class="item-list hidden">
                 <ul class="media-list collection-list">
                     {% for coll, count in collections %}
                         {% if count %} {# don't display empty collections #}
