--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -36,7 +36,8 @@ body{
 	margin: auto;
 }
 
-.collection-list.cover-view .collection{
+/*.collection-list.cover-view .collection{*/
+.cover-view .cover {
 	width: 200px;
 	height:250px;
 
@@ -56,7 +57,8 @@ body{
 	border-radius: 3px;
 }
 
-.collection-list.cover-view .collection>a{
+/*.collection-list.cover-view .collection>a{*/
+.cover-view .cover > a {
 	position:absolute;
 	width:100%;
 	height:100%;
@@ -124,3 +126,4 @@ body{
 .collection-list .media {
     max-width: none;
 }
+
