add cover browse view for volume list and search result displays; display mini cover in volume list display [#67574168]

--- a/readux/books/templates/books/search.html
+++ b/readux/books/templates/books/search.html
@@ -51,6 +51,8 @@
         {% endif %} {# valid form #}
     </header>
     <section>
+      {% include "snippets/coverlist_toggle.html" with start='list' %}
+
       {% if facets.collection %}
       <p>Filter results by collection:</p>
       <ul class="nav nav-pills">
@@ -63,14 +65,8 @@
       {% endif %}
 
       {% if items %} {# results to display #}
-        <div class="container">
-          <ul class="media-list">
-              {% for obj in items.object_list %}
-                {% include 'books/snippets/list_volume.html' %}
-              {% endfor %}
-            </ul>
-        </div>
-        {% endif %}
+        {% include 'books/snippets/volumes.html' %}
+      {% endif %}
 
     {% if items.has_other_pages %}
     {% include 'eultheme/snippets/pagination_all_pages.html' with results=items %}
