--- a/readux/books/templates/books/snippets/list_volume.html
+++ b/readux/books/templates/books/snippets/list_volume.html
@@ -23,17 +23,7 @@
     </h4>
     <p>{{ obj.creator|join:'; ' }}</p>
 
-    <a class="btn btn-primary btn-xs" href="{% url 'books:pdf' obj.pid %}" title="PDF for {{ obj.title|truncatechars:100 }} {{ obj.volume|default:'' }}">
-        <span class="glyphicon glyphicon-file"></span>
-        <span>View PDF</span>
-    </a>
-
-    {# link to voyant with full document plain text as input; preset english stopwords for english texts #}
-    <a href="http://voyant-tools.org/?input={{ obj.fulltext_absolute_url }}{% if "eng" in obj.language %}&amp;stopList=stop.en.taporware.txt{% endif %}"
-       title="send text to Voyant" target="_blank" class="btn btn-default btn-xs">
-            <span class="glyphicon glyphicon-send"></span>
-            <span>Send to Voyant</span>
-     </a>
+    {% include 'books/snippets/volume_links.html' with vol=obj small_buttons=True %}
 
     <abbr class="unapi-id" title="{{ obj.pid }}"></abbr>
   </div>
