--- a/readux/collection/templates/collection/view.html
+++ b/readux/collection/templates/collection/view.html
@@ -50,14 +50,13 @@
             displaying {{ items.start_index|intcomma }} - {{ items.end_index|intcomma }}{% endif %}
             {# if more than one item on this page, display range of results #}
         </p>
+
+        {% include "snippets/coverlist_toggle.html" with start='list' %}
+        {% include 'books/snippets/volumes.html' %}
+
       {% else %}
         <h2 id="no-results-found">No volumes in this collection.</h2>
       {% endif %}
-        <div class="container">
-          {% for obj in items.object_list %}
-            {% include 'books/snippets/list_volume.html' %}
-          {% endfor %}
-        </div><!-- /.container-->
 
     {% if items.has_other_pages %}
       {% include 'eultheme/snippets/pagination_all_pages.html' with results=items %}
