add unapi link to single volume page, to make harvestable by zotero [#73078428]

--- a/readux/books/templates/books/snippets/volume_links.html
+++ b/readux/books/templates/books/snippets/volume_links.html
@@ -9,4 +9,7 @@
    title="send text to Voyant" target="_blank" class="btn btn-default{% if small_buttons %} btn-xs{% endif %}">
         <span class="glyphicon glyphicon-send"></span>
         <span>Send to Voyant</span>
- </a>
+</a>
+
+{# unapi id for zotero harvest #}
+<abbr class="unapi-id" title="{{ vol.pid }}"></abbr>
