--- a/readux/books/templates/books/search.html
+++ b/readux/books/templates/books/search.html
@@ -65,7 +65,7 @@
       {% endif %}
 
       {% if items %} {# results to display #}
-        {% include 'books/snippets/volumes.html' %}
+        {% include 'books/snippets/show_volumes.html' %}
       {% endif %}
 
     {% if items.has_other_pages %}
