--- a/readux/collection/templates/collection/view.html
+++ b/readux/collection/templates/collection/view.html
@@ -52,7 +52,7 @@
         </p>
 
         {% include "snippets/coverlist_toggle.html" with start='list' %}
-        {% include 'books/snippets/volumes.html' %}
+        {% include 'books/snippets/show_volumes.html' %}
 
       {% else %}
         <h2 id="no-results-found">No volumes in this collection.</h2>
